--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -109,11 +109,11 @@
 {% block content %}
     <section id="themeChanger">
         <div class="dropdown-end d-flex justify-content-end pt-2 pe-3">
-            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown">
+            <button class="btn dropdown-toggle fs-5" type="button" data-bs-toggle="dropdown">
                 Выбор темы
             </button>
             <ul class="dropdown-menu" id="themeSwitch">
-                <li class="px-1">
+                <li class="px-1 fs-6">
                     <button class="dropdown-item active rounded-2" type="button" id="lightBtn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-brightness-high-fill me-3" viewBox="0 0 16 16">
                             <path d="M12 8a4 4 0 1 1-8 0 4 4 0 0 1 8 0M8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0m0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13m8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5M3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8m10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0m-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0m9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707M4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708"/>
@@ -122,7 +122,7 @@
                     </button>
                 </li>
                 <li><p class="dropdown-divider"></li>
-                <li class="px-1">
+                <li class="px-1 fs-6">
                     <button class="dropdown-item rounded-2" type="button" id="darkBtn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-moon-fill me-3" viewBox="0 0 16 16">
                             <path d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278"/>
@@ -144,8 +144,8 @@
 
     <section id="about us">
         <div class="bg-body-secondary p-3">
-            <h1 class="fs-1">О нас</h1>
-            <p class="fs-5">Виртуальное пространство, где инновации и знания сливаются в единое целое! Наш хостинг - это результат коллективных усилий университета, предоставляющий инфраструктуру для запуска и поддержки разнообразных проектов, подпроектов и исследовательских инициатив.Мы предоставляем пространство и ресурсы для развертывания разнообразных проектов, от исследовательских и учебных до инновационных и творческих инициатив.
+            <h1 class="fs-1 mb-3">О нас</h1>
+            <p class="text-body-secondary fs-5 px-5">Виртуальное пространство, где инновации и знания сливаются в единое целое! Наш хостинг - это результат коллективных усилий университета, предоставляющий инфраструктуру для запуска и поддержки разнообразных проектов, подпроектов и исследовательских инициатив.Мы предоставляем пространство и ресурсы для развертывания разнообразных проектов, от исследовательских и учебных до инновационных и творческих инициатив.
         </div>
         <div class="shape-container shape-line shape-position-bottom bg-body-secondary">
             <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="100%" height="10%" preserveAspectRatio="xMidYMid meet">
@@ -167,8 +167,8 @@
                             <path d="M6 1v3H1V1zM1 0a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1V1a1 1 0 0 0-1-1zm14 12v3h-5v-3zm-5-1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1zM6 8v7H1V8zM1 7a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1zm14-6v7h-5V1zm-5-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1V1a1 1 0 0 0-1-1z"/>
                         </svg>
                     </span>
-                    <h3 class="fs-4 mt-3">Какие проекты могут размещаться на вашем хостинге?</h3>
-                    <p class="fs-6">
+                    <h3 class="fw-normal fs-4 mt-3">Какие проекты могут размещаться на вашем хостинге?</h3>
+                    <p class="text-body-secondary fs-6">
                         Мы приветствуем широкий спектр проектов, включая исследования, учебные инициативы, творческие проекты и инновационные стартапы. Важно, чтобы ваш проект отражал ценности университетского сообщества.
                     </p>
                 </div>
@@ -178,8 +178,8 @@
                             <path fill-rule="evenodd" d="M0 0h1v15h15v1H0zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5"/>
                         </svg>
                     </span>
-                    <h3 class="fs-4 mt-3">Каковы преимущества размещения проекта на вашем хостинге?</h3>
-                    <p class="fs-6">
+                    <h3 class="fw-normal fs-4 mt-3">Каковы преимущества размещения проекта на вашем хостинге?</h3>
+                    <p class="text-body-secondary fs-6">
                         Наш хостинг предоставляет надежное виртуальное пространство с высокой производительностью, а также поддержку исследовательских и образовательных инициатив. Вы также будете частью активного сообщества, обмен информацией и идеями с другими проектами.
                     </p>
                 </div>
@@ -189,8 +189,8 @@
                             <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.5a1 1 0 0 0-.8.4l-1.9 2.533a1 1 0 0 1-1.6 0L5.3 12.4a1 1 0 0 0-.8-.4H2a2 2 0 0 1-2-2zm3.5 1a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1zm0 2.5a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1zm0 2.5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1z"/>
                         </svg>
                     </span>
-                    <h3 class="fs-4 mt-3">Как получить поддержку для своего проекта на вашем хостинге?</h3>
-                    <p class="fs-6">
+                    <h3 class="fw-normal fs-4 mt-3">Как получить поддержку для своего проекта на вашем хостинге?</h3>
+                    <p class="text-body-secondary fs-6">
                         Мы предоставляем техническую поддержку и консультации по настройке проекта. Кроме того, у нас есть сеть сообщества, где вы можете обсудить свои идеи, найти партнеров и получить обратную связь от опытных участников.
                     </p>
                 </div>
@@ -200,8 +200,8 @@
                             <path fill-rule="evenodd" d="M5.828 10.172a.5.5 0 0 0-.707 0l-4.096 4.096V11.5a.5.5 0 0 0-1 0v3.975a.5.5 0 0 0 .5.5H4.5a.5.5 0 0 0 0-1H1.732l4.096-4.096a.5.5 0 0 0 0-.707m4.344 0a.5.5 0 0 1 .707 0l4.096 4.096V11.5a.5.5 0 1 1 1 0v3.975a.5.5 0 0 1-.5.5H11.5a.5.5 0 0 1 0-1h2.768l-4.096-4.096a.5.5 0 0 1 0-.707m0-4.344a.5.5 0 0 0 .707 0l4.096-4.096V4.5a.5.5 0 1 0 1 0V.525a.5.5 0 0 0-.5-.5H11.5a.5.5 0 0 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 0 .707m-4.344 0a.5.5 0 0 1-.707 0L1.025 1.732V4.5a.5.5 0 0 1-1 0V.525a.5.5 0 0 1 .5-.5H4.5a.5.5 0 0 1 0 1H1.732l4.096 4.096a.5.5 0 0 1 0 .707"/>
                         </svg>
                     </span>
-                    <h3 class="fs-4 mt-3">Какие возможности для масштабирования предоставляет ваш хостинг?</h3>
-                    <p class="fs-6">
+                    <h3 class="fw-normal fs-4 mt-3">Какие возможности для масштабирования предоставляет ваш хостинг?</h3>
+                    <p class="text-body-secondary fs-6">
                         Наш хостинг гибко растет вместе с вашим проектом. Вы можете легко масштабировать ресурсы, добавлять новые функции и адаптировать свой проект к изменяющимся требованиям, обеспечивая его долгосрочное развитие.
                     </p>
                 </div>
@@ -210,7 +210,7 @@
     </section>
 
     <section id="projects">
-        <h1 class="fs-1 p-2">Проекты</h1>
+        <h1 class="fs-1 px-3">Проекты</h1>
 
             <div class="container my-5 bg-light-primary border border-2 rounded-4 g-0 p-3 shadow">
                 <form>
@@ -241,7 +241,7 @@
                                     <span class="d-flex badge justify-content-end">
                                         {% if card.status == 'full' %}
                                             <div class="position-absolute d-flex top-0 translate-middle-y px-1 py-1 rounded-pill border-1 text-bg-success">
-                                                <div class="px-1 fs-3">Набор окончен</div>
+                                                <div class="p-1 font-monospace">Набор окончен</div>
                                                 <div class="vr mx-1"></div>
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
                                                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
@@ -251,7 +251,7 @@
                                         {% endif %}
                                         {% if card.status == 'process' %}
                                             <div class="position-absolute d-flex top-0 translate-middle-y px-1 py-1 rounded-pill border-1 text-bg-warning">
-                                                <div class="px-1">В процессе</div>
+                                                <div class="p-1 font-monospace">В процессе</div>
                                                 <div class="vr mx-1"></div>
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-hourglass-split" viewBox="0 0 16 16">
                                                     <path d="M2.5 15a.5.5 0 1 1 0-1h1v-1a4.5 4.5 0 0 1 2.557-4.06c.29-.139.443-.377.443-.59v-.7c0-.213-.154-.451-.443-.59A4.5 4.5 0 0 1 3.5 3V2h-1a.5.5 0 0 1 0-1h11a.5.5 0 0 1 0 1h-1v1a4.5 4.5 0 0 1-2.557 4.06c-.29.139-.443.377-.443.59v.7c0 .213.154.451.443.59A4.5 4.5 0 0 1 12.5 13v1h1a.5.5 0 0 1 0 1zm2-13v1c0 .537.12 1.045.337 1.5h6.326c.216-.455.337-.963.337-1.5V2zm3 6.35c0 .701-.478 1.236-1.011 1.492A3.5 3.5 0 0 0 4.5 13s.866-1.299 3-1.48zm1 0v3.17c2.134.181 3 1.48 3 1.48a3.5 3.5 0 0 0-1.989-3.158C8.978 9.586 8.5 9.052 8.5 8.351z"/>
@@ -260,7 +260,7 @@
                                         {% endif %}
                                         {% if card.status == 'quickly' %}
                                             <div class="position-absolute d-flex top-0 translate-middle-y px-1 py-1 rounded-pill border-1 text-bg-danger">
-                                                <div class="px-1">Срочно!</div>
+                                                <div class="p-1 font-monospace">Срочно!</div>
                                                 <div class="vr mx-1"></div>
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-circle" viewBox="0 0 16 16">
                                                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
@@ -270,7 +270,7 @@
                                         {% endif %}
                                         {% if card.status == 'frozen' %}
                                             <div class="position-absolute d-flex top-0 translate-middle-y px-1 py-1 rounded-pill border-1 text-bg-primary">
-                                                <div class="px-1">Заморожен</div>
+                                                <div class="p-1 font-monospace">Заморожен</div>
                                                 <div class="vr mx-1"></div>
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pause-circle" viewBox="0 0 16 16">
                                                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
@@ -279,8 +279,8 @@
                                             </div>
                                         {% endif %}
                                     </span>
-                                    <h5 class="card-title text-center">{{card.title}}</h5>
-                                    <p class="card-text">{{card.description|truncatechars:140}}</p>
+                                    <h5 class="card-title text-center fs-5">{{card.title}}</h5>
+                                    <p class="card-text fs-6 fw-light">{{card.description|truncatechars:140}}</p>
                                     <a href="subProjects/{{card.pid}}" class="stretched-link"></a>
                                 </div>
                             </div>
@@ -303,28 +303,28 @@
             </svg>
         </div>
         <div class="container-fluid bg-body-secondary">
-            <h1 class="fs-1 p-3">Единство Творческих Умов</h1>
-            <div class="container-fluid col-11">
+            <h1 class="fs-1">Единство Творческих Умов</h1>
+            <div class="container-fluid">
                 <div class="row justify-content-around">
-                    <div class="col-5 fs-4">
-                        <p>С гордостью объявляем, что наш хостинг поддерживает целое сообщество талантливых и преданных участников. Мы вдохновляем, обучаем и совершенствуемся вместе, создавая инновационные проекты, которые изменят мир.</p>
+                    <div class="col-5 mt-3">
+                        <p class="text-body-secondary fs-5">С гордостью объявляем, что наш хостинг поддерживает целое сообщество талантливых и преданных участников. Мы вдохновляем, обучаем и совершенствуемся вместе, создавая инновационные проекты, которые изменят мир.</p>
                         <div class="row mt-4 fs-5 justify-content-center text-center">
                             <div class="col-sm-3">
-                                <span>Участников</span><br>
+                                <span class="lead fs-4">Участников</span><br>
                                 <span>{{wcount}}</span>
                             </div>
                             <div class="col-sm-3 row-2 border-start border-end border-dark px-4">
-                                <span>Проектов</span><br>
+                                <span class="lead fs-4">Проектов</span><br>
                                 <span>{{pcount}}</span>
                             </div>
                             <div class="col-sm-5">
-                                <span>Выполненных проектов</span><br>
+                                <span class="lead fs-4">Выполненных проектов</span><br>
                                 <span>{{cpcount}}</span>
                             </div>
                         </div>
                     </div>
                     <div class="col-6">
-                        <img src={% static "/img/logo-photo.jpg" %} width="60%" height="60%" alt="">
+                        <img src={% static "/img/idea.png" %} width="80%" height="80%" alt="">
                     </div>
                 </div>
             </div>
@@ -333,14 +333,14 @@
 
     <section id="invite">
         <div class="container-fluid bg-body-secondary">
-            <h1 class="fs-2 p-2 text-center">Хочешь поделиться идеей или посмотреть что сделали другие?</h1>
-            <p class="p-2 fs-4 text-center">Ваш взгляд ценен! Предложите свои идеи или ознакомьтесь с тем, что уже сделали другие участники.</p>
+            <h1 class="fs-1 p-2 text-center">Хочешь поделиться идеей или посмотреть что сделали другие?</h1>
+            <p class="fw-normal fs-4 mt-3 text-center">Ваш взгляд ценен! Предложите свои идеи или ознакомьтесь с тем, что уже сделали другие участники.</p>
             <div class="row mt-5">
                 <div class="row justify-content-center mb-5">
                     <div class="col-sm-3 mb-3 mb-sm-0">
                         <div class="card shadow-lg p-3 h-100">
                             <div class="card-body text-center d-flex flex-column">
-                                <p class="card-text pb-5 fs-6">Здесь мы гордимся результатами творчества и инноваций в нашем университетском сообществе. Исследуйте наши успешно завершенные проекты, каждый из которых стал уникальным вкладом в наше общее научное и творческое наследие. Открывайте для себя идеи, вдохновляйтесь достижениями других участников, и подготовьтесь к собственным ярким шагам в мире инноваций.</p>
+                                <p class="card-text pb-5 fs-6 text-start">Здесь мы гордимся результатами творчества и инноваций в нашем университетском сообществе. Исследуйте наши успешно завершенные проекты, каждый из которых стал уникальным вкладом в наше общее научное и творческое наследие. Открывайте для себя идеи, вдохновляйтесь достижениями других участников, и подготовьтесь к собственным ярким шагам в мире инноваций.</p>
                                 <div class="position-absolute bottom-0 start-50 translate-middle-x pb-3">
                                     <a class="btn btn-outline-dark rounded-3 lastBtn" href={% url 'completedProjects' %}>Выполненные проекты</a>
                                 </div>
@@ -350,8 +350,8 @@
 
                     <div class="col-sm-3 mb-3 mb-sm-0">
                         <div class="card shadow-lg p-3 h-100">
-                        <div class="card-body text-center">
-                            <p class="card-text pb-5 fs-6">Это ваше пространство для творчества и инноваций! Нажмите на кнопку "Предложить свои проекты", чтобы внести свой вклад в уникальную мозаику идей и исследований нашего университетского хостинга. Здесь ваше видение может стать реальностью, а ваш проект - частью нашей вдохновляющей истории. Давайте вместе строить будущее, наполненное творчеством и инновациями!</p>
+                        <div class="card-body text-center d-flex flex-column">
+                            <p class="card-text pb-5 fs-6 text-start">Это ваше пространство для творчества и инноваций! Нажмите на кнопку "Предложить свои проекты", чтобы внести свой вклад в уникальную мозаику идей и исследований нашего университетского хостинга. Здесь ваше видение может стать реальностью, а ваш проект - частью нашей вдохновляющей истории. Давайте вместе строить будущее, наполненное творчеством и инновациями!</p>
                             <div class="position-absolute bottom-0 start-50 translate-middle-x pb-3">
                                 <button type="button" class="btn btn-outline-dark rounded-3 lastBtn" data-bs-toggle="modal" data-bs-target="#invite-prj">
                                     Предложить проект
@@ -366,11 +366,11 @@
     </section>
 
     <section id="contacts">
-        <div class="container-fluid">
+        <div class="container-fluid p-3">
             <h1 class="fs-1 col text-start">Контакты</h1>
             <div class="row justify-content-center">
-                <div class="col-3">
-                    <h6>Контакты</h6>
+                <div class="col-4">
+                    <h6 class="fw-normal fs-4 mt-3">Контакты</h6>
                     <ul>
                         <li>Телефон: 8(351)799-71-01</li>
                         <li>Адрес: г. Челябинск, ул. Братьев Кашириных, д. 129</li>
@@ -378,7 +378,7 @@
                     </ul>
                 </div>
                 <div class="col-3">
-                    <h6>Продукты</h6>
+                    <h6 class="fw-normal fs-4 mt-3">Продукты</h6>
                     <ul>
                         <li>
                             <a href="https://www.csu.ru/" class="nav-link">Официальный сайт</a>
