--- a/Django/CSUProjects/templates/subProjects.html
+++ b/Django/CSUProjects/templates/subProjects.html
@@ -97,15 +97,15 @@
     
     <nav class="navbar navbar-expand-sm position-fixed-top shadow-lg border-bottom nav-underline user-select-none">
         <div class="container-fluid ">
-            <h2 class="logo d-flex justify-content-center"><a class="navbar-brand nav-link active" id="title" href={% url 'main' %}>Проекты ЧелГУ.</a></h2>
+            <h2 class="logo d-flex justify-content-center fs-1"><a class="navbar-brand nav-link active" id="title" href={% url 'main' %}>Проекты ЧелГУ.</a></h2>
         </div>
         <div class="collapse navbar-collapse justify-content-end col-8" id="navbarNav">
             <ul class="navbar-nav text-center align-items-center">
                 <li class="nav-item">
-                    <a class="nav-link" href={% url 'main' %}>Главная</a>
+                    <a class="nav-link fs-5" href={% url 'main' %}>Главная</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href={% url 'completedProjects' %}>Выполненные проекты</a>
+                    <a class="nav-link fs-5" href={% url 'completedProjects' %}>Выполненные проекты</a>
                 </li>
             </ul>
         </div>
@@ -113,8 +113,8 @@
 
     <section id="about-project">
         <div class="bg-body-secondary p-3">
-            <h1 class="fs-1">{{project.title}}</h1>
-            <p class="fs-5">{{project.description}}</p>
+            <h1 class="fs-1 mb-3">{{project.title}}</h1>
+            <p class="text-body-secondary fs-5 px-5">{{project.description}}</p>
         </div>
         <div class="shape-container shape-line shape-position-bottom bg-body-secondary">
             <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="100%" height="10%" preserveAspectRatio="xMidYMid meet">
@@ -129,7 +129,7 @@
     </section>
 
     <section id="subprojects">
-        <h1 class="fs-1 p-2">Подпроекты</h1>
+        <h1 class="fs-1 px-3">Подпроекты</h1>
         <div class="container">
             <div class="grid mt-5 mb-5">
                 <div class="row gy-4 gx-0 justify-content-between align-items-center">
@@ -139,14 +139,14 @@
                          style="max-width: 540px;">
                         <div class="d-flex text-center align-items-center">
                             <div class="card-body px-0">
-                                <h5 class="card-title pb-3 border-bottom border-2">{{card.title}}</h5>
+                                <h5 class="card-title pb-3 border-bottom border-2 fs-5">{{card.title}}</h5>
                                 <div class="card-text collapse multiCollapse{{card.sid}}" id="collapse{{card.sid}} description{{card.sid}}">
                                     <table class="table table-striped table-borderless w-100">
-                                        <thead class="align-middle">
+                                        <thead class="align-middle px-5">
                                             <th>Требования к студенту</th>
-                                            <th>Требуемые напрвления обучения</th>
+                                            <th>Требуемые направления обучения</th>
                                         </thead>
-                                        <tbody class="align-middle">
+                                        <tbody class="align-middle fs-6">
                                             {% for vacancy in vacancies %}
                                                 {% if vacancy.sid == card.sid %}
                                                     <tr>
@@ -158,7 +158,7 @@
                                         </tbody>
                                     </table>
                                 </div>
-                                <p class="card-text px-4 collapse show multiCollapse{{card.sid}}" id="description{{card.sid}}">{{card.description}}</p>
+                                <p class="card-text px-4 collapse show multiCollapse{{card.sid}} fs-6" id="description{{card.sid}}">{{card.description}}</p>
                                 <div class="d-flex pt-3 pe-2 border-top border-1 justify-content-around">
                                     <button class="btn btn-sm btn-outline-dark rounded-3 lastBtn"
                                         type="button"
@@ -188,8 +188,8 @@
         <div class="container-fluid mt-4 sticky-bottom bg-body-secondary border-top border-3">
             <h1 class="fs-1 col text-start">Контакты</h1>
             <div class="row justify-content-center">
-                <div class="col-3">
-                    <h6>Контакты</h6>
+                <div class="col-4">
+                    <h6 class="fw-normal fs-4 mt-3" >Контакты</h6>
                     <ul>
                         <li>Телефон: 8(351)799-71-01</li>
                         <li>Адрес: г. Челябинск, ул. Братьев Кашириных, д. 129</li>
@@ -197,7 +197,7 @@
                     </ul>
                 </div>
                 <div class="col-3">
-                    <h6>Продукты</h6>
+                    <h6 class="fw-normal fs-4 mt-3">Продукты</h6>
                     <ul>
                         <li>
                             <a href="https://www.csu.ru/" class="nav-link">Официальный сайт</a>
