--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -100,39 +100,54 @@
 	<script type="text/javascript" src={% static "/src/JScripts/vortexAnimation/V_engine.js" %} defer></script>
     <script type="text/javascript" src={% static "/src/JScripts/themeToggle.js" %} defer></script>
     <script type="text/javascript" src= {% static "/src/JScripts/search.js" %} defer></script>
+    
     {% comment %} <script type="text/javascript" src={% static "/src/JScripts/CSULogo.js" %} defer></script> {% endcomment %}
 
 	<link rel="stylesheet" href={% static "/css/vortex.css" %}>
+    <link rel="stylesheet" href={% static "/css/dropdown.css" %}>
 
 {% endblock cssAndScripts %}
 
 {% block content %}
-    <section id="themeChanger">
-        <div class="dropdown-end d-flex justify-content-end pt-2 pe-3">
-            <button class="btn dropdown-toggle fs-5" type="button" data-bs-toggle="dropdown">
-                Выбор темы
-            </button>
-            <ul class="dropdown-menu" id="themeSwitch">
-                <li class="px-1 fs-6">
-                    <button class="dropdown-item active rounded-2" type="button" id="lightBtn">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-brightness-high-fill me-3" viewBox="0 0 16 16">
+    <nav class="navbar navbar-expand position-fixed-top shadow-lg border-bottom nav-underline user-select-none">
+        <div class="container-fluid">
+            <h2 class="d-sm-flex d-none justify-content-center fs-1"><a class="navbar-brand nav-link active" href={% url 'main' %}>Проекты ЧелГУ.</a></h2>
+        </div>
+        <div class="collapse navbar-collapse justify-content-md-end col-md-8 col-10 me-4" id="navbarNav">
+            <ul class="navbar-nav text-center align-items-center">
+                <li class="nav-item">
+                    <a class="nav-link fs-5" href={% url 'main' %}>Главная</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link fs-5" href={% url 'completedProjects' %}>Выполненные проекты</a>
+                </li>
+                <li class="nav-item dropdown-center">
+                    <button class="dropdown-toggle fs-5 nav-link" type="button" data-bs-toggle="dropdown">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-brightness-high-fill" viewBox="0 0 16 16" id="themeSvg">
                             <path d="M12 8a4 4 0 1 1-8 0 4 4 0 0 1 8 0M8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0m0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13m8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5M3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8m10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0m-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0m9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707M4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708"/>
                         </svg>
-                        Светлая
                     </button>
-                </li>
-                <li><p class="dropdown-divider"></li>
-                <li class="px-1 fs-6">
-                    <button class="dropdown-item rounded-2" type="button" id="darkBtn">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-moon-fill me-3" viewBox="0 0 16 16">
-                            <path d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278"/>
-                        </svg>
-                        Тёмная
-                    </button>
+                    <ul class="dropdown-menu px-1" id="themeSwitch">
+                        <li>
+                            <button class="dropdown-item d-flex align-items-center w-75 active" type="button" id="lightBtn">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-brightness-high-fill" viewBox="0 0 16 16">
+                                    <path d="M12 8a4 4 0 1 1-8 0 4 4 0 0 1 8 0M8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0m0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13m8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5M3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8m10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0m-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0m9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707M4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708"/>
+                                </svg>
+                            </button>
+                        </li>
+                        <li><p class="dropdown-divider"></li>
+                        <li>
+                            <button class="dropdown-item d-flex align-items-center w-75" type="button" id="darkBtn">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-moon-fill" viewBox="0 0 16 16">
+                                    <path d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278"/>
+                                </svg>
+                            </button>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
-    </section>
+    </nav>
 
 	<section id="preview" class="mb-5">
 		<div class="container-fluid row-2 text-center">
