upd: fix footer into htmls

--- a/Django/CSUProjects/templates/completedProjects.html
+++ b/Django/CSUProjects/templates/completedProjects.html
@@ -94,7 +94,7 @@
         <div class="container-fluid">
             <h2 class="logo d-sm-flex d-none justify-content-center fs-1"><a class="navbar-brand nav-link active" id="title" href={% url 'main' %}>Проекты ЧелГУ.</a></h2>
         </div>
-        <div class="collapse navbar-collapse justify-content-md-end col-md-8 col-10" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-md-end col-md-8 col-10 me-4" id="navbarNav">
             <ul class="navbar-nav text-center align-items-center px-3">
                 <li class="nav-item">
                     <a class="nav-link fs-5" href={% url 'main' %}>Главная</a>
@@ -165,8 +165,8 @@
     </section>
 
     <section id="contacts">
-        <div class="container-fluid mt-4 sticky-bottom bg-body-secondary border-top border-3">
-            <h1 class="fw-normal fs-4 mt-3">Контакты</h1>
+        <div class="container-fluid p-3">
+            <h1 class="fs-1 col text-start">Контакты</h1>
             <div class="row justify-content-center">
                 <div class="col-lg-3 col-6">
                     <h6>Контакты</h6>
@@ -180,10 +180,10 @@
                     <h6 class="fw-normal fs-4 mt-3">Продукты</h6>
                     <ul>
                         <li>
-                            <a href="https://www.csu.ru/" class="nav-link">Официальный сайт</a>
+                            <a href="https://www.csu.ru/" class="link-body-emphasis opacity-75">Официальный сайт</a>
                         </li>
                         <li>
-                            <a href="https://moodle.uio.csu.ru/" class="nav-link">Moodle университета</a>
+                            <a href="https://moodle.uio.csu.ru/" class="link-body-emphasis opacity-75">Moodle университета</a>
                         </li>
                     </ul>
                 </div>
