--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -399,10 +399,10 @@
                     <h6 class="fw-normal fs-4 mt-3">Продукты</h6>
                     <ul>
                         <li>
-                            <a href="https://www.csu.ru/" class="nav-link">Официальный сайт</a>
+                            <a href="https://www.csu.ru/" class="link-body-emphasis opacity-75">Официальный сайт</a>
                         </li>
                         <li>
-                            <a href="https://moodle.uio.csu.ru/" class="nav-link">Moodle университета</a>
+                            <a href="https://moodle.uio.csu.ru/" class="link-body-emphasis opacity-75">Moodle университета</a>
                         </li>
                     </ul>
                 </div>
