fix: footer into sub and comp html

--- a/Django/CSUProjects/templates/subProjects.html
+++ b/Django/CSUProjects/templates/subProjects.html
@@ -185,11 +185,11 @@
     </section>
 
     <section id="contacts">
-        <div class="container-fluid p-3">
+        <div class="container-fluid mt-4 sticky-bottom bg-body-secondary border-top border-3">
             <h1 class="fs-1 col text-start">Контакты</h1>
             <div class="row justify-content-center">
                 <div class="col-lg-3 col-6">
-                    <h6>Контакты</h6>
+                    <h6 class="fw-normal fs-4 mt-3">Контакты</h6>
                     <ul>
                         <li>Телефон: 8(351)799-71-01</li>
                         <li>Адрес: г. Челябинск, ул. Братьев Кашириных, д. 129</li>
