--- a/Django/CSUProjects/templates/completedProjects.html
+++ b/Django/CSUProjects/templates/completedProjects.html
@@ -165,8 +165,8 @@
     </section>
 
     <section id="contacts">
-        <div class="container-fluid p-3">
-            <h1 class="fs-1 col text-start">Контакты</h1>
+        <div class="container-fluid mt-4 sticky-bottom bg-body-secondary border-top border-3">
+            <h1 class="fw-normal fs-4 mt-3">Контакты</h1>
             <div class="row justify-content-center">
                 <div class="col-lg-3 col-6">
                     <h6>Контакты</h6>
