--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -116,7 +116,7 @@
         <div class="collapse navbar-collapse justify-content-md-end col-md-8 col-10 me-4" id="navbarNav">
             <ul class="navbar-nav text-center align-items-center">
                 <li class="nav-item">
-                    <a class="nav-link fs-5" href={% url 'main' %}>Главная</a>
+                    <a class="nav-link active fs-5" href={% url 'main' %}>Главная</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link fs-5" href={% url 'completedProjects' %}>Выполненные проекты</a>
