--- a/Django/CSUProjects/templates/cinema.html
+++ b/Django/CSUProjects/templates/cinema.html
@@ -4,6 +4,7 @@
 {% block cssAndScripts %}
     {% load static%}
 
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css'><link rel="stylesheet" href={% static "/css/cinema.css"%}>
     <script type="importmap">
         {
             "imports": {
@@ -77,7 +78,7 @@
     
         </script>
         <script type="text/javascript" src={% static "/src/JScripts/themeToggle.js" %} defer></script>
-
+    
 {% endblock cssAndScripts %}
 
 {% block content %}
@@ -98,53 +99,50 @@
         </div>
     </nav>
 
-    <section id="slides" class="d-flex justify-content-center">
-        <div class="z-0 d-flex container-fluid justify-content-center align-self-center align-items-center py-1 px-5 sticky-top mt-3">
-            <div id="workersCarousel" class="carousel slide carousel-fade">
-                <div class="carousel-inner">
-                    <div class="carousel-item active d-flex">
-                        <img src={% static "/img/slide-background.png" %} class="img-fluid w-100 rounded-5 user-select-none" alt="">
-                        <div class="carousel-caption d-flex flex-column justify-content-center h-100">
-                            <h2 class="py-5 fs-1 text-center">{{project.title}}</h2>
-                            <h4 class="pt-5 lead fs-4 text-center">{{project.description}}</h4>
-                        </div>
+    <section class="cinema-carousel pt-3">
+        <h2 class="fs-1 text-center pb-2">{{project.title}}</h2>
+        <h4 class="pb-2 lead fs-4 text-center">{{project.description}}</h4>
+
+        <div class="owl-carousel owl-carousel1 owl-theme">
+        {% for card in cards %}
+            <div class="mb-5 ">
+                <div class="card text-center shadow-lg mx-4 rounded-4">
+                    {% if card.wid.mediaExists %}
+                        <img class="card-img-top" src= {{card.wid.photo.url}}>
+                    {% else %}
+                        <img class="card-img-top"src={% static "/img/worker-photo.jpg" %}>
+                    {% endif %}
+                    
+                    <div class="card-body">
+                        <h3 class="text-danger h2"> {{card.wid.name}} <br />
+                        <h5 class="text-body-secondary fs-4"> {{card.post}} </h5>
+                        </h3>
+                        <p class="card-text text-start fw-normal fs-5 py-3">{{card.description}}</p>
                     </div>
-                    {% for card in cards %}
-                    <div class="carousel-item d-flex">
-                        <img src={% static "/img/slide-background.png" %} class="img-fluid w-100 rounded-5 user-select-none" alt="">
-                        <div class="carousel-caption d-flex flex-column justify-content-center h-100">
-                            <div class="card shadow-lg rounded-4 border-2">
-                                <div class="row">
-                                    <div class="col-4">
-                                    {% if card.wid.mediaExists %}
-                                        <img class="d-flex rounded-start-4 img-fluid h-100 w-100 start-0" src= {{card.wid.photo.url}}>
-                                    {% else %}
-                                        <img class="d-flex rounded-start-4 img-fluid h-100 w-100 start-0"src={% static "/img/worker-photo.jpg" %}>
-                                    {% endif %}
-                                    </div>
-                                    <div class="col-8 ps-0">
-                                        <div class="card-body px-0">
-                                            <h1 class="pt-3 pb-4 border-bottom border-2 fs-2">{{card.post}}</h1>
-                                            <h3 class="pt-2 pb-3 text-start lead fs-4 fw-medium">{{card.wid.name}}</h3>
-                                            <div class="fs-5 px-3 text-start fw-light">{{card.description}}</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#workersCarousel" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#workersCarousel" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
+        {% endfor %}
         </div>
     </section>
 
+    <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-end align-items-center w-100 sticky-bottom">
+        <div id="liveToast" class="toast align-items-center text-bg-secondary border-0  m-3 end-0" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
+            <div class="d-flex">
+              <div class="toast-body">
+                Телефон руководителя проект:<br/> 8(908)-484-57-80 <br/>
+                <a href="https://bootstrap-4.ru/docs/5.3/components/toasts/#placement">Ссылка на готовый проект</a>
+              </div>
+              <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Закрыть"></button>
+            </div>
+        </div>
+    </div>
+
+    <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js'></script><script  src={% static "/src/JScripts/cinemaCarousel.js" %}></script>
+
+    <script type="text/javascript">
+        const toastLiveExample = document.getElementById('liveToast')
+        const toastBootstrap = bootstrap.Toast.getOrCreateInstance(toastLiveExample)
+        toastBootstrap.show()
+    </script>
 {% endblock content %}
